# nlp-healthcare-summit-2025

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  README.org  lint-org.sh  pyproject.toml  tangle-org.sh  update.sh
contacts/: contacts.org  speakers.org
docs/: knowledge_graph.md
docs/status/: 2025-03-31-claude-sonnet.org
kb/: knowledge_base.org  research_papers.org  topics.org
nlp_healthcare_summit_2025/: __init__.py
nlp_healthcare_summit_2025/scripts/: __init__.py  process_contacts.py  process_knowledge.py  process_sessions.py
sessions/: nlp_summit_sessions.org  sessions.org
